--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button type="button"
                   class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-dec">–
           </button><!--
-          --><input type="text" class="upload-resize-control upload-resize-controls-value" step="25" value="55%" readonly min="25" max="100" title="Image Scale" name="scale"/><!--
+          --><input type="text" class="upload-resize-control upload-resize-controls-value" step="25" value="100%" readonly min="25" max="100" title="Image Scale" name="scale"/><!--
           --><button type="button"
                   class="upload-resize-control upload-resize-controls-button upload-resize-controls-button-inc">+
           </button>
@@ -156,6 +156,7 @@
 <script src="js/picture.js"></script>
 <script src="js/preview.js"></script>
 <script src="js/gallery.js"></script>
+<script src="js/initialize-scale.js"></script>
 <script src="js/form.js"></script>
 
 </html>
