--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
 
         <fieldset class="upload-effect-controls">
-          <div class="upload-effect-level">
-            <input type="number" class="upload-effect-level-value" name="effect-level" value="20">
-            <div class="upload-effect-level-line">
+          <div class="upload-effect-level hidden">
+            <input type="number" class="upload-effect-level-value hidden" name="effect-level" value="20">
+            <div class="upload-effect-level-line ">
               <div class="upload-effect-level-pin" style="left: 20%"></div>
               <div class="upload-effect-level-val"></div>
             </div>
@@ -157,6 +157,7 @@
 <script src="js/preview.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/initialize-scale.js"></script>
+<script src="js/initialize-filters.js"></script>
 <script src="js/form.js"></script>
 
 </html>
