--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
 </body>
 
+<script src="js/backend.js"></script>
 <script src="js/data.js"></script>
 <script src="js/picture.js"></script>
 <script src="js/preview.js"></script>
